<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/info_bg"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="23dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:text="@string/transfer_time"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:text="@string/time_explanation"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingBottom="16dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/free_time"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/no_limits"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:text="@string/be_cool_explanation"
        android:textSize="12sp" />
</LinearLayout>
