<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="28dp"
    android:paddingLeft="26dp"
    android:paddingRight="26dp"
    android:paddingBottom="20dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/union_contact_center"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/contactCenterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/default_contact_phone"
        android:textSize="23sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/authorizationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="13dp"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_authorization"
            android:textSize="12sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/authorize"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/drawerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorize"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/drawerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white75"
        android:text="@string/auth_creation"
        android:layout_marginTop="5dp"/>
</LinearLayout>