<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/creditCardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_credit"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/credit_card"
        android:textColor="@android:color/black"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/googlePayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_google_pay_mark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/google_pay"
        android:textColor="@android:color/black"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        />


</LinearLayout>